Thu Jan 14 17:17:29 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/multicast.ini-dist:
        * docs/html/multicast/multicast.html:

          Updated default port number documentation.

Thu Jan 14 16:50:08 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastConfiguration.cpp:

          Older versions of ACE do not properly support the is_multicast
          operation; it has been removed in the name of compatibility with
          broken releases.

Wed Jan 13 22:12:10 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:

          Fixed idiotic SEGV when passing a NULL pointer to send_buffer.

Wed Jan 13 21:57:22 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * bin/dcps_tests.lst:
        * tests/DCPS/BidirMessenger:
        * tests/DCPS/BidirMessenger/BidirMessenger.mpc:
        * tests/DCPS/BidirMessenger/DataReaderListener.h:
        * tests/DCPS/BidirMessenger/DataReaderListener.cpp:
        * tests/DCPS/BidirMessenger/Messenger.idl:
        * tests/DCPS/BidirMessenger/Writer.h:
        * tests/DCPS/BidirMessenger/Writer.cpp:
        * tests/DCPS/BidirMessenger/multicast.conf:
        * tests/DCPS/BidirMessenger/pub_udp.ini:
        * tests/DCPS/BidirMessenger/publisher.cpp:
        * tests/DCPS/BidirMessenger/pubsub.ini:
        * tests/DCPS/BidirMessenger/pubsub.cpp:
        * tests/DCPS/BidirMessenger/pubsub_ipv6.ini:
        * tests/DCPS/BidirMessenger/pubsub_multicast.ini:
        * tests/DCPS/BidirMessenger/run_test.pl:
        * tests/DCPS/BidirMessenger/sub_udp.ini:
        * tests/DCPS/BidirMessenger/tcp.conf:
        * tests/DCPS/BidirMessenger/udp.conf:

          Added BidirMessenger test (submitted by Don Busch) with
          modifications to test the new udp and multicast transports.

Wed Jan 13 20:34:03 UTC 2010  Steven Stallion  <stallions@ociweb.com>
