@@ -149,7 +149,7 @@ tests/DCPS/Messenger/run_ns_test.pl: !DCPS_MIN !DDS_NO_ORBSVCS
 tests/DCPS/Messenger/run_test.pl ipv6: IPV6 !DCPS_MIN
 
 tests/DCPS/BidirMessenger/run_test.pl: !DCPS_MIN
-##tests/DCPS/BidirMessenger/run_test.pl udp: !DCPS_MIN
+tests/DCPS/BidirMessenger/run_test.pl udp: !DCPS_MIN
 tests/DCPS/BidirMessenger/run_test.pl multicast: !DCPS_MIN !QNX
 tests/DCPS/BidirMessenger/run_test.pl nobits: !DCPS_MIN
 tests/DCPS/BidirMessenger/run_test.pl ipv6: IPV6 !DCPS_MIN
